# apple_support

./: .bazelrc  .gitattributes  .pre-commit-config.yaml  .travis.yml  BUILD  BUILD.bazel  BUILD.toolchains  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  MODULE.bazel  README.md  WORKSPACE  main.c  platform_mappings  rules_cc.patch  rules_cc_legacy_tool.patch  tcsetup.bzl  travis_test.sh  update_docs.sh
.bazelci/: presubmit.yml  update_workspace_to_deps_heads.sh
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: generate-notes.sh  update-module-version.sh
.github/workflows/: create-release.yml  publish.yaml
build_settings/: BUILD  build_settings.bzl
configs/: BUILD  platforms.bzl
constraints/: BUILD
crosstool/: BUILD  BUILD.toolchains  BUILD.tpl  apple_cc_configure_extension.bzl  cc_toolchain_config.bzl  cov_tool_wrapper.sh.tpl  gcov.sh  generate-modulemap.sh  libtool.cc  libtool.sh  libtool.sh.tpl  llvm-cov.sh  llvm-profdata.sh  module.modulemap  osx_cc_configure.bzl  osx_cc_wrapper.sh.tpl  setup.bzl  setup_internal.bzl  strip.sh  universal_exec_tool.bzl  wrapped_clang.cc  xcrunwrapper.sh
crosstool/internal/: setup.bzl
crosstool/rules_based/: BUILD  dynamic_toolchain_info.bzl  features.bzl  foo.bzl  toolchain_env.bzl
crosstool/rules_based/pgo/: BUILD
crosstool/rules_based/tools/: BUILD
doc/: BUILD  BUILD.bazel  README.md  apple_support.md  repositories.md  rules.md  xcode_support.md
lib/: BUILD  apple_support.bzl  framework_migration.bzl  lipo.bzl  macos_universal_binary.bzl  missing_platform_fallback_users.bzl  providers.bzl  repositories.bzl  swizzle_absolute_xcttestsourcelocation.m  transitions.bzl  universal_binary.bzl  xcode_support.bzl
lib/private/: BUILD  providers.bzl
lipo/: BUILD  lipo.sh  lipo_toolchain.bzl  xcode_lipo_toolchain.bzl
rules/: BUILD  apple_genrule.bzl  multi_arch_wrapper.bzl  rules.bzl  rules.doc.bzl  toolchain_substitution.bzl  universal_binary.bzl
rules/install_name_tool/: BUILD  install_name_tool.bzl  install_name_tool_wrapper.sh  toolchain.bzl  xcode_toolchain.bzl
rules/lipo/: BUILD  toolchain.bzl  xcode_toolchain.bzl
rules/private/: BUILD  apple_genrule.bzl
test/: BUILD  MODULE.bazel  WORKSPACE  apple_support_test.bzl  available_xcodes_test.bzl  binary_tests.bzl  cc_test_with_objc_deps.cc  cc_toolchain_forwarder.bzl  compiling_tests.bzl  hello.S  install_name_tool_rpath_test.sh  install_name_tool_test.sh  linking_support.bzl  linking_tests.bzl  linkstamp.cc  linkstamp.h  linkstamp_test.cc  loadable_library.cc  loadable_library.h  loadable_library_test.cc  objc_lib.h  objc_lib.m  rules_cc.patch  sanitizer_tests.bzl  selected_xcode_version_retriever_test.bzl  starlark_apple_binary.bzl  starlark_apple_static_library.bzl  test_helpers.bzl  toolchains_test.bzl  transitions.bzl  universal_binary_test.bzl  verify_archive_timestamps.sh  verify_stripped_symbols.sh  verify_unused_symbol_exists.sh  wrapped_clang_test.sh  xcode_config_test.bzl  xcode_support_test.bzl  xcode_version_test.bzl
test/header_parsing/: BUILD  c_only_header.h  invalid_header.h  valid_header.h
test/layering_check/: BUILD  a.h  b.h  c.cpp  c.m
test/linux_toolchain/: BUILD  linux_sysroot.BUILD  smoke.c  swift_toolchain.BUILD
test/rpaths/: BUILD  bar.cc  foo.cc  test-portable.sh  test.cc
test/rules/: action_command_line_test.bzl  apple_verification_test.bzl
test/shell/: BUILD  apple_common.sh  apple_test.sh  coverage_test.sh  header_parsing_test.sh  integration_test_setup.sh  layering_check_test.sh  libtool_test.sh  objc_test.sh  testenv.sh  unittest.bash  unittest_utils.sh  verify_binary.sh  verify_object_hashes.sh  verify_relative_oso.sh  wrapped_clang_test.sh
test/test_data/: BUILD  c_test_for_coverage.c  cc_lib.cc  duplicate.cc  dylib.c  framework_includes_provider.bzl  ios_main.m  main.cc  objc_lib.cpp  objc_lib.m  objc_lib_with_unused_symbol.m  objc_pch_lib.m  objcpp_lib.mm  test_lib.c  watch_main.m
test/test_data/nested/: duplicate.cc
test/test_data/toolchain_configs/: darwin_arm64.json  darwin_arm64e.json  darwin_x86_64.json  ios_arm64.json  ios_arm64e.json  ios_sim_arm64.json  ios_x86_64.json  linux_x86_64.json  tvos_arm64.json  tvos_sim_arm64.json  tvos_x86_64.json  visionos_arm64.json  visionos_sim_arm64.json  watchos_arm64.json  watchos_arm64_32.json  watchos_armv7k.json  watchos_device_arm64.json  watchos_device_arm64e.json  watchos_x86_64.json
toolchain/: BUILD  cc_toolchain.bzl  dynamic_toolchain_info.bzl  features.bzl  toolchain_env.bzl
toolchain/coverage/: BUILD
toolchain/lipo/: lipo_toolchain.bzl
toolchain/objc/: BUILD
toolchain/pgo/: BUILD
toolchain/sanitizers/: BUILD
toolchain/tools/: BUILD
tools/: BUILD  xcode_path_wrapper.sh
tools/http_dmg/: BUILD.bazel  http_dmg.bzl
tools/http_dmg/private/tests/: BUILD.bazel  BUILD.firefox.bazel  firefox_info.plist  http_dmg_test_deps.bzl  http_dmg_test_extensions.bzl  krita_info.plist
xcode/: BUILD  available_xcodes.bzl  providers.bzl  selected_xcode_version_retriever.bzl  xcode_config.bzl  xcode_config_alias.bzl  xcode_config_resolver.bzl  xcode_configure.bzl  xcode_sdk_variant.bzl  xcode_version.bzl
xcode/private/: BUILD  providers.bzl
