"""apple_support"""

module(
    name = "apple_support",
    bazel_compatibility = [">=7.0.0"],
    compatibility_level = 1,
    repo_name = "build_bazel_apple_support",
)

bazel_dep(name = "bazel_features", version = "1.27.0")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_cc", version = "0.2.17")
single_version_override(
    module_name = "rules_cc",
    patch_strip = 1,
    patches = [
        # https://github.com/bazelbuild/rules_cc/commit/f32fdf585dd07f67d9ef60cd2633960d0d8cb6a2
        # https://github.com/bazelbuild/rules_cc/pull/614
        # https://github.com/bazelbuild/rules_cc/pull/642
        # https://github.com/bazelbuild/rules_cc/pull/645
        # https://github.com/bazelbuild/rules_cc/pull/647
        # https://github.com/bazelbuild/rules_cc/pull/648
        # https://github.com/bazelbuild/rules_cc/pull/658
        # https://github.com/bazelbuild/rules_cc/pull/659
        # https://github.com/bazelbuild/rules_cc/pull/660
        "//:rules_cc.patch",
    ],
)

apple_cc_configure = use_extension("//crosstool:setup.bzl", "apple_cc_configure_extension")
use_repo(apple_cc_configure, "local_config_apple_cc", "local_config_apple_cc_toolchains")

register_toolchains("@local_config_apple_cc_toolchains//:all")

bazel_dep(name = "rules_shell", version = "0.3.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True)

# TODO: Remove when transitives bump past this
bazel_dep(name = "protobuf", version = "33.0", dev_dependency = True)

dmg_arc_test_deps = use_extension("//tools/http_dmg/private/tests:http_dmg_test_extensions.bzl", "http_dmg_test", dev_dependency = True)
use_repo(
    dmg_arc_test_deps,
    "http_dmg_test_firefox",
    "http_dmg_test_firefox_strip_prefix",
    "http_dmg_test_krita",
    "http_dmg_test_krita_strip_prefix",
)

toolchain_env = use_repo_rule("//toolchain:toolchain_env.bzl", "toolchain_env")

toolchain_env(name = "apple_support_toolchain_env")
