load("@bazel_skylib//rules:diff_test.bzl", "diff_test")

diff_test(
    name = "firefox_diff_test",
    file1 = "@http_dmg_test_firefox//:info_plist",
    file2 = "firefox_info.plist",
)

diff_test(
    name = "firefox_strip_prefix_diff_test",
    file1 = "@http_dmg_test_firefox_strip_prefix//:info_plist",
    file2 = "firefox_info.plist",
)
